--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,6 +4,7 @@
 
 .footer {
   display: flex;
+
   width: 100%;
   height: 75px !important;
   background-color: yellow;
@@ -11,6 +12,7 @@
   bottom: 0;
   align-items: center;
   justify-content: center;
+  padding: 10px;
 
   p {
     padding-left: 50px;
