--- a/src/components/landing/Landing.scss
+++ b/src/components/landing/Landing.scss
@@ -159,10 +159,10 @@
     .left {
       // flex: 0.6;
       h1 {
-        font-size: 2.5rem;
+        font-size: 2rem;
       }
       h2 {
-        font-size: 2rem;
+        font-size: 1.7rem;
       }
       h3 {
         display: none;
