--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -7,6 +7,7 @@
   position: fixed;
   overflow: hidden;
   top: 0;
+  z-index: 10;
   .wrapper {
     padding: 0 50px;
     overflow: hidden;
@@ -68,9 +69,15 @@
   .navbar {
     .wrapper {
       .left {
+        flex: 1;
         width: 100%;
+        .logo {
+          width: 100%;
+          border: 2px solid black;
+        }
         .p1 {
-          font-size: 1.5rem;
+          font-size: 1.2rem;
+          color: grey;
         }
       }
     }
